--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+   <ul id="band"></ul>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
