--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-   <ul id="band"></ul>
+   <ul id="bands"></ul>
 	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
-</html>
+</html>https://www.svgrepo.com/show/345221/three-dots.svg
